packages/sycamore-macro/tests/view/component-fail.stderr
error: unexpected end of input, expected `,` (help: make sure you pass the ctx variable to the macro as an argument)
 --> tests/view/component-fail.rs:5:5
  |
5 | /     view! {
6 | |         div
7 | |     }
  | |_____^
  |
  = note: this error originates in the macro `view` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of input, expected either `(` or `{`
  --> tests/view/component-fail.rs:14:26
   |
14 |         let _: View<G> = view! { ctx, C };
   |                          ^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `view` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0412]: cannot find type `G` in this scope
 --> tests/view/component-fail.rs:4:29
  |
4 | fn c(ctx: Scope) -> View<G> {
  |     -                       ^ not found in this scope
  |     |
  |     help: you might be missing a type parameter: `<G>`

error[E0425]: cannot find function, tuple struct or tuple variant `UnknownComponent` in this scope
  --> tests/view/component-fail.rs:12:39
   |
12 |         let _: View<G> = view! { ctx, UnknownComponent() };
   |                                       ^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function, tuple struct or tuple variant `C` in this scope
  --> tests/view/component-fail.rs:15:39
   |
4  | fn c(ctx: Scope) -> View<G> {
   | ------------------------------ similarly named function `c` defined here
...
15 |         let _: View<G> = view! { ctx, C(1) };
   |                                       ^
   |
help: a function with a similar name exists
   |
15 |         let _: View<G> = view! { ctx, c(1) };
   |                                       ~
help: you might be missing a type parameter
   |
10 | fn compile_fail<G: Html, C>() {
   |                        +++
